[gd_scene format=3 uid="uid://h40n601x4jgd"]

[ext_resource type="PackedScene" uid="uid://bvdbogspriemp" path="res://interface/components/context_menu/context_menu_base.tscn" id="1_3t8o5"]
[ext_resource type="Script" uid="uid://beg0tusuxvdm3" path="res://interface/components/context_menu/server_context_menu.gd" id="2_p6mro"]
[ext_resource type="Texture2D" uid="uid://8fxdu703xrgt" path="res://icons/close.png" id="2_ssah8"]
[ext_resource type="Texture2D" uid="uid://d3vb2bm6jy37n" path="res://icons/edit.png" id="3_3s4i8"]
[ext_resource type="Texture2D" uid="uid://d3ickyammn2u" path="res://icons/personOff.png" id="3_p6mro"]
[ext_resource type="Texture2D" uid="uid://cqr51vyo67pvs" path="res://icons/info.png" id="3_uv8rb"]

[node name="ServerContextMenu" unique_id=319957489 instance=ExtResource("1_3t8o5")]
script = ExtResource("2_p6mro")

[node name="PanelContainer" parent="." index="1" unique_id=235822602]
custom_minimum_size = Vector2(300, 0)

[node name="ServerName" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer" parent_id_path=PackedInt32Array(547925685) index="0" unique_id=856636462]
unique_name_in_owner = true
layout_mode = 2
text = "Server Name"
horizontal_alignment = 1

[node name="EditButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer" parent_id_path=PackedInt32Array(547925685) index="1" unique_id=576702497]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Edit Server"
icon = ExtResource("3_3s4i8")
alignment = 0
expand_icon = true

[node name="ViewRulesButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer" parent_id_path=PackedInt32Array(547925685) index="2" unique_id=924873958]
unique_name_in_owner = true
layout_mode = 2
text = "View Rules"
icon = ExtResource("3_uv8rb")
alignment = 0
expand_icon = true

[node name="LeaveServerButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer" parent_id_path=PackedInt32Array(547925685) index="3" unique_id=1983193461]
layout_mode = 2
theme_type_variation = &"Button_Red"
text = "Leave Server"
icon = ExtResource("3_p6mro")
alignment = 0
expand_icon = true

[node name="LeaveServerPanel" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer" parent_id_path=PackedInt32Array(547925685) index="4" unique_id=1261939947]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/LeaveServerPanel" index="0" unique_id=1863939462]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/LeaveServerPanel/MarginContainer" index="0" unique_id=38824619]
layout_mode = 2

[node name="PurgeAllMessages" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer/LeaveServerPanel/MarginContainer/VBoxContainer" index="0" unique_id=1988878789]
unique_name_in_owner = true
layout_mode = 2
text = "Purge all messages?"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/LeaveServerPanel/MarginContainer/VBoxContainer" index="1" unique_id=1448011737]
layout_mode = 2

[node name="CancelLeaveServer" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/LeaveServerPanel/MarginContainer/VBoxContainer/HBoxContainer" index="0" unique_id=1992484802]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"
icon = ExtResource("2_ssah8")

[node name="ConfirmLeaveServer" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/LeaveServerPanel/MarginContainer/VBoxContainer/HBoxContainer" index="1" unique_id=469331627]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"Button_Red"
text = "Leave"
icon = ExtResource("3_p6mro")

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ViewRulesButton" to="." method="_on_view_rules_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/LeaveServerButton" to="." method="_on_leave_server_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/LeaveServerPanel/MarginContainer/VBoxContainer/HBoxContainer/CancelLeaveServer" to="." method="_on_cancel_leave_server_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/LeaveServerPanel/MarginContainer/VBoxContainer/HBoxContainer/ConfirmLeaveServer" to="." method="_on_confirm_leave_server_pressed"]
